manifests/cluster-addons/cilium/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui
  namespace: kube-system
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: int-bakseter-net
      namespace: tailscale

  hostnames:
    - hubble.int.bakseter.net

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - group: ''
          kind: Service
          name: hubble-ui
          port: 80
          weight: 1
